scrollbar fix now unified among list/details view. common LESS variables created.

--- a/src/less/lavaboom-variables.less
+++ b/src/less/lavaboom-variables.less
@@ -233,11 +233,11 @@ body{
 	}
 }
 
-.row.no-gutter {
-	margin: 0;
+.no-gutter {
+	margin: 0 !important;
 	> [class*='col-'] {
-	  padding-right:0;
-	  padding-left:0;
+	  padding-right:0 !important;
+	  padding-left:0 !important;
 	}
 }
 
